<resources>
    <string name="app_name">Google</string>
    <string name="app">Secret</string>
    <string name="pt">Turnip Studio</string>
    <string name="usia">18+</string>
    <string name="install">Install</string>
    <string name="ukuran">10 MB</string>
    <string name="lala">Contains ads in-app purchases</string>
    <string name="juara">#1 Top Media Social </string>
    <string name="desk">Secret Messangger, Simple, Personal, Real Time</string>
</resources>
